[tool.poetry]
name = "karisa"
version = "0.1.0"
description = ""
authors = ["XDeviation <xth9681@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
qq-botpy = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
